force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/clofor_com_cfs__ReferencePrice__c.object-meta.xml
<CustomObject>
    <label>Reference Price</label>
    <nameField>
        <displayFormat>RFPS-{000000}</displayFormat>
        <label>Reference Price + Service ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reference Price</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>