force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/AirLine__c.field-meta.xml
<CustomField>
    <fullName>AirLine__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Air Line</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.clofor_com_cfs__Custom_Type__c</field>
            <operation>equals</operation>
            <value>航空会社</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Reference Price (Air Line)</relationshipLabel>
    <relationshipName>Reference_Price</relationshipName>
    <type>Lookup</type>
</CustomField>