force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs__ApplicationDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ApplicationDate__c</fullName>
    <label>Valid Start Date</label>
    <type>Date</type>
</CustomField>