force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs__ExportCountry__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ExportCountry__c</fullName>
    <formula>TEXT( clofor_com_cfs__pol__r.clofor_com_cfs__Country_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Export Country</label>
    <type>Text</type>
</CustomField>