force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs__Foodcategory__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Foodcategory__c</fullName>
    <label>Food Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__FoodCategory</valueSetName>
    </valueSet>
</CustomField>