force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs__ImportCountry__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__ImportCountry__c</fullName>
    <formula>TEXT( clofor_com_cfs__pod__r.clofor_com_cfs__Country_Name__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Country</label>
    <type>Text</type>
</CustomField>