force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs__pol__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__pol__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>POL</label>
    <referenceTo>clofor_com_cfs__Port__c</referenceTo>
    <relationshipName>Reference_Price_Service1</relationshipName>
    <type>Lookup</type>
</CustomField>