force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs__Servicename__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Servicename__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Name</label>
    <referenceTo>clofor_com_cfs__TariffMaster__c</referenceTo>
    <relationshipName>Reference_Price_Service</relationshipName>
    <type>Lookup</type>
</CustomField>