force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs__TemperatureType__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__TemperatureType__c</fullName>
    <label>Temperature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__TemperatureType</valueSetName>
    </valueSet>
</CustomField>