force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs__Unitpriceofsellingfcy__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Unitpriceofsellingfcy__c</fullName>
    <label>Unit Price Of Selling (FCY)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>