force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs__Unitpriceofsellinglocal__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Unitpriceofsellinglocal__c</fullName>
    <label>Unit Price Of Selling (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>