force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/clofor_com_cfs_pod_r_clofor_com_cfs_C__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs_pod_r_clofor_com_cfs_C__c</fullName>
    <label>Charge Unit 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__UnitType</valueSetName>
    </valueSet>
</CustomField>