force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/Container_Type_2__c.field-meta.xml
<CustomField>
    <fullName>Container_Type_2__c</fullName>
    <label>Container Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>clofor_com_cfs_pod_r_clofor_com_cfs_C__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContainerType</valueSetName>
    </valueSet>
</CustomField>