force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/Container_Type_3__c.field-meta.xml
<CustomField>
    <fullName>Container_Type_3__c</fullName>
    <label>Container Type 3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Charge_Unit_3__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__ContainerType</valueSetName>
    </valueSet>
</CustomField>