force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/Country_of_Transit_Port__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Transit_Port__c</fullName>
    <label>Country of Transit Port</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__CountryList</valueSetName>
    </valueSet>
</CustomField>