force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/DirectorTransit__c.field-meta.xml
<CustomField>
    <fullName>DirectorTransit__c</fullName>
    <label>Direct or Transit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>Transit</fullName>
            </value>
            <value>
                <fullName>Direct &amp; Transit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>