force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/Other_Charge__c.field-meta.xml
<CustomField>
    <fullName>Other_Charge__c</fullName>
    <label>Other Charge</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>