force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PIC</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.clofor_com_cfs__ServiceProviderVender__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Reference Price</relationshipLabel>
    <relationshipName>Reference_Price</relationshipName>
    <type>Lookup</type>
</CustomField>