force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/POD__c.field-meta.xml
<CustomField>
    <fullName>POD__c</fullName>
    <label>AOD/POD</label>
    <type>TextArea</type>
</CustomField>