force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/POL__c.field-meta.xml
<CustomField>
    <fullName>POL__c</fullName>
    <label>AOL/POL</label>
    <type>TextArea</type>
</CustomField>