force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/TransitPorttextarea__c.field-meta.xml
<CustomField>
    <fullName>TransitPorttextarea__c</fullName>
    <label>Transit Port</label>
    <type>TextArea</type>
</CustomField>