force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/Under_45_KG__c.field-meta.xml
<CustomField>
    <fullName>Under_45_KG__c</fullName>
    <label>Under 45 KG</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>