force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/Unit_Price_Of_Buying_JPY_3__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Of_Buying_JPY_3__c</fullName>
    <label>Unit Price Of Buying (JPY) 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>