force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/X1000KG__c.field-meta.xml
<CustomField>
    <fullName>X1000KG__c</fullName>
    <label>+1000KG</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>