force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/fields/X100KG__c.field-meta.xml
<CustomField>
    <fullName>X100KG__c</fullName>
    <label>+100KG</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>