force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/recordTypes/ReferencePrice.recordType-meta.xml
<RecordType>
    <fullName>ReferencePrice</fullName>
    <active>true</active>
    <label>Air Cargo - Buying</label>
</RecordType>