force-app/main/default/objects/clofor_com_cfs__ReferencePrice__c/recordTypes/Sea_Reference_Price_Buying.recordType-meta.xml
<RecordType>
    <fullName>Sea_Reference_Price_Buying</fullName>
    <active>true</active>
    <label>Sea Cargo - Buying</label>
</RecordType>